--- a/_posts/2023-05-05-pitap.md
+++ b/_posts/2023-05-05-pitap.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 author: Gh0st-D3V
-tags: [Automation, Scripting]
+tags: [Monitoring, Scripting, Physical Security]
 ---
 
 # PI-TAP
