--- a/_posts/2023-05-05-pitap.md
+++ b/_posts/2023-05-05-pitap.md
@@ -13,7 +13,7 @@ some of the information is redacted to protect the idenity of the server owners.
 
 ## Network Map
 ![Network Map](/images/PI-TAP_Map.jpg "A map of the network layout with the PI-TAP")
-<sub>Network map diagram provided by Swinderski IT Solutions & Security</sub>
+<sub>Network map diagram provided by Swiderski IT Solutions & Security</sub>
 
 ## PCAP File retrevial
 The PCAP files could be accessed remotely from the tap by connecting to the taps own wireless network, after connecting you would be able to visit the taps internal python server and download recent PCAP files.
