--- a/_posts/2023-12-11-resume.md
+++ b/_posts/2023-12-11-resume.md
@@ -9,9 +9,9 @@ tags: [Resume]
 
 
 
-![Page1](/images/Resume1_1.jpg)
+![Page1]("/images/R1.jpg")
 
-![Page2](/images/Resume2_2.jpg)
+![Page2]("/images/R2.jpg")
 
 ---
 {: data-content="footnotes"}
