--- a/_posts/2023-12-11-resume.md
+++ b/_posts/2023-12-11-resume.md
@@ -9,9 +9,9 @@ tags: [Resume]
 
 
 
-![Page1]("/images/R1.jpg")
+![Page1](/images/R1.jpg "Page 1")
 
-![Page2]("/images/R2.jpg")
+![Page2](/images/R2.jpg "Page 2")
 
 ---
 {: data-content="footnotes"}
